0027060: Visualization issue with TopoDS_Vertex after call of AIS_Shape::SetColor()

AIS_Shape::setColor() - define Aspect_TOM_PLUS point aspect
in sync with Prs3d_Drawer::PointAspect() when Prs3d_Drawer has no Link.